--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = quora
+name = modularity
 author = Christopher Su
 author-email = chris+py@christopher.su
-summary = Fetches and parses data from Quora.
+summary = A library for managing dynamic modules in Python.
 description-file = README
